# PointCloudCrafter

./: .gitignore  404.html  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  README.md  docker.html  getting_started.html  index.html  mkdocs.yml  package.xml  paper.bib  pip_package.html  pyproject.toml  sitemap.xml  third-party.html  usage.html
.devcontainer/: devcontainer.json
.github/workflows/: build_test.yml  cpplint.yml  docker.yml  docs.yml  paper-pdf.yml  pypi.yml  testpypi.yml
docker/: Dockerfile  Dockerfile.dev  build_docker.sh  run_docker.sh
docs/: Doxyfile  Makefile  docker.md  getting_started.md  index.md  paper.bib  paper.md  pip_package.md  third-party.md  usage.md
docs/scripts/: capture_version.sh
docs/version_details/: index.md  latest.md  v1.2.4.md  v1.3.4.md  v1.4.1.md  v1.4.3.md
docs/version_details/snippets/: help_file_latest.txt  help_file_v1.2.4.txt  help_rosbag_latest.txt  help_rosbag_v1.3.4.txt  help_rosbag_v1.4.1.txt
docs_cpp/: CLI11_8hpp_source.html  annotated.html  classCLI_1_1App-members.html  classCLI_1_1App.html  classCLI_1_1App__coll__graph.map  classCLI_1_1App__coll__graph.md5  classCLI_1_1App__inherit__graph.map  classCLI_1_1App__inherit__graph.md5  classCLI_1_1ArgumentMismatch-members.html  classCLI_1_1ArgumentMismatch.html  classCLI_1_1ArgumentMismatch__inherit__graph.map  classCLI_1_1ArgumentMismatch__inherit__graph.md5  classCLI_1_1AsNumberWithUnit-members.html  classCLI_1_1AsNumberWithUnit.html  classCLI_1_1AsNumberWithUnit__coll__graph.map  classCLI_1_1AsNumberWithUnit__coll__graph.md5  classCLI_1_1AsNumberWithUnit__inherit__graph.map  classCLI_1_1AsNumberWithUnit__inherit__graph.md5  classCLI_1_1AsSizeValue-members.html  classCLI_1_1AsSizeValue.html  classCLI_1_1AsSizeValue__coll__graph.map  classCLI_1_1AsSizeValue__inherit__graph.md5  classCLI_1_1BadNameString-members.html  classCLI_1_1BadNameString.html  classCLI_1_1BadNameString__coll__graph.map  classCLI_1_1BadNameString__coll__graph.md5  classCLI_1_1Bound-members.html  classCLI_1_1Bound.html  classCLI_1_1Bound__coll__graph.md5  classCLI_1_1Bound__inherit__graph.map  classCLI_1_1CallForAllHelp-members.html  classCLI_1_1CallForAllHelp.html  classCLI_1_1CallForAllHelp__coll__graph.map  classCLI_1_1CallForAllHelp__coll__graph.md5  classCLI_1_1CallForHelp-members.html  classCLI_1_1CallForHelp.html  classCLI_1_1CallForHelp__coll__graph.map  classCLI_1_1CallForHelp__inherit__graph.md5  classCLI_1_1CallForVersion-members.html  classCLI_1_1CallForVersion.html  (+472 more)
docs_cpp/search/: all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  functions_1.js  (+36 more)
package/: bake_libs.sh
pcdmodifier/: CMakeLists.txt  package.xml
pcdmodifier/include/: pcdmodifier.hpp
pcdmodifier/src/: pcdmodifier.cpp  pcdmodifier_main.cpp
pointcloudcrafter/: CMakeLists.txt  package.xml
pointcloudcrafter/include/: CLI11.hpp
pointcloudcrafter/include/pointcloudcrafter/: filter_subscriber.hpp  pcl_utils.hpp  point_types.hpp  pointcloudcrafter.hpp  rosbag_reader.hpp  rosbag_to_gnss.hpp  rosbag_to_pcd.hpp  utils.hpp
pointcloudcrafter/src/: pcl_utils.cpp  pointcloudcrafter.cpp  pointcloudcrafter_main.cpp  rosbag_to_gnss.cpp  rosbag_to_gnss_main.cpp  rosbag_to_pcd.cpp  rosbag_to_pcd_main.cpp  utils.cpp
pointcloudcrafter/transform/: example.txt
pointcloudcrafter_file/: CMakeLists.txt
pointcloudcrafter_file/include/pointcloudcrafter_file/: pointcloudcrafter_file.hpp
pointcloudcrafter_file/src/: pointcloudcrafter_file.cpp  pointcloudcrafter_file_main.cpp
pointcloudcrafter_pcd/: CMakeLists.txt
pointcloudcrafter_pcd/include/pointcloudcrafter_pcd/: pointcloudcrafter_pcd.hpp
pointcloudcrafter_pcd/src/: pointcloudcrafter_pcd.cpp  pointcloudcrafter_pcd_main.cpp
pointcloudcrafter_rosbag/: CMakeLists.txt
pointcloudcrafter_rosbag/include/pointcloudcrafter_rosbag/: pointcloudcrafter_rosbag.hpp
pointcloudcrafter_rosbag/src/: pointcloudcrafter_rosbag.cpp  pointcloudcrafter_rosbag_main.cpp
pointcloudmodifier/: CMakeLists.txt
pointcloudmodifier/examples/: CMakeLists.txt  example.cpp
pointcloudmodifier/include/: pointcloudmodifier.hpp
pointcloudmodifier/src/: pointcloudmodifier.cpp  pointcloudmodifier_main.cpp
pointcloudmodifier/tests/: CMakeLists.txt  unit_pointcloudmodifier.cpp
pointcloudmodifyer/: CMakeLists.txt
pointcloudmodifyer/examples/: CMakeLists.txt  example.cpp
pointcloudmodifyer/include/: pointcloudmodifyer.hpp
pointcloudmodifyer/src/: pointcloudmodifyer.cpp
python/: bake_libs.sh
search/: search_index.json
tests/rosbag/: README.md  metadata.yaml  rosbag_0.mcap
tests/transform/: pcd_example.txt  rosbag_example.txt
tum_rosbag_analyzer/: CMakeLists.txt  README.md  package.xml
tum_rosbag_analyzer/include/tum_rosbag_analyzer/: rosbag_analyzer.hpp  timestamp_analyzer.hpp
tum_rosbag_analyzer/src/: CMakeLists.txt  rosbag_analyzer.cpp  timestamp_analyzer.cpp
utils/: CMakeLists.txt  cli_config.hpp  formats.hpp  rosbag_reader.hpp  utils.hpp
utils/cli/: CLI11.hpp  cli_config.hpp
version_details/: index.html  latest.html  v1.2.4.html  v1.3.4.html  v1.4.1.html  v1.4.3.html
version_details/snippets/: help_file_v1.3.4.txt  help_file_v1.4.1.txt  help_rosbag_v1.4.3.txt
