<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pointcloudmodifier</name>
  <version>1.0.0</version>
  <description>PCD modification tool.</description>
  <maintainer email="dominik.kulmer@tum.de">Dominik Kulmer</maintainer>
  <maintainer email="maxi.leitenstern@tum.de">Maximilian Leitenstern</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <!--depend>autoware_cmake</depend-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
