<?xml version="1.0"?>
<package format="3">
  <name>tum_rosbag_analyzer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="maxi.leitenstern@tum.de">maxi</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>ament_index_cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
